# GeneFuseRust

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
benches/: my_benchmark.rs
benchmark_res/: bench_res.md  hg38_fusion_csv_list.txt
src/: argparse.rs  genefuse.rs  lib.rs  main.rs
src/aux/: global_settings.rs  he.rs  int_hasher.rs  limited_bufreader.rs  mod.rs  ndarray.rs  pbar.rs
src/core/: common.rs  edit_distance.rs  fasta_reader.rs  fastq_reader.rs  fusion.rs  fusion_mapper.rs  fusion_result.rs  fusion_scan.rs  gene.rs  html_reporter.rs  indexer.rs  json_reporter.rs  matcher.rs  mod.rs  overlap.rs  pescanner.rs  pescanner_backup  read.rs  read_match.rs  sequence.rs  sescanner.rs
src/utils/: logging.rs  mod.rs
testdata/: tinyref.fa
